force-app/main/default/objects/Avaliacao__c/fields/Degluti_o_PARD_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Degluti_o_PARD_Fonoaudiologia__c</fullName>
    <label>Deglutição (PARD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nível I – Normal</fullName>
            </value>
            <value>
                <fullName>Nível II – Funcional</fullName>
            </value>
            <value>
                <fullName>Nível III – Disfagia Leve</fullName>
            </value>
            <value>
                <fullName>Nível IV – Disfagia leve a moderada</fullName>
            </value>
            <value>
                <fullName>Nível V – Disfagia moderada</fullName>
            </value>
            <value>
                <fullName>Nível VI – Disfagia moderada grave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>