force-app/main/default/objects/Avaliacao__c/fields/Denti_o_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Denti_o_Fonoaudiologia__c</fullName>
    <label>Dentição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ausente</fullName>
            </value>
            <value>
                <fullName>Completa</fullName>
            </value>
            <value>
                <fullName>Incompleta</fullName>
            </value>
            <value>
                <fullName>Bom estado</fullName>
            </value>
            <value>
                <fullName>Médio estado</fullName>
            </value>
            <value>
                <fullName>Mau estado</fullName>
            </value>
            <value>
                <fullName>Próteses bem-adaptadas</fullName>
            </value>
            <value>
                <fullName>Prósteses mal-adaptadas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>