force-app/main/default/objects/Avaliacao__c/fields/Depend_ncia_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Depend_ncia_Fonoaudiologia__c</fullName>
    <label>Dependência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ar ambiente</fullName>
            </value>
            <value>
                <fullName>Cateter nasal</fullName>
            </value>
            <value>
                <fullName>Máscara facial</fullName>
            </value>
            <value>
                <fullName>Tenda traqueal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>