force-app/main/default/objects/Avaliacao__c/fields/Dieta_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Dieta_Enfermagem__c</fullName>
    <label>Dieta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zero</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Sonda</fullName>
            </value>
            <value>
                <fullName>Gastrostomia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>