force-app/main/default/objects/Avaliacao__c/fields/Dispositivos_Medica__c.field-meta.xml
<CustomField>
    <fullName>Dispositivos_Medica__c</fullName>
    <label>Dispositivos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traqueostomia</fullName>
            </value>
            <value>
                <fullName>Gastrostomia</fullName>
            </value>
            <value>
                <fullName>Sonda Nasoentérica</fullName>
            </value>
            <value>
                <fullName>Sonda Vesical</fullName>
            </value>
            <value>
                <fullName>Colostomia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>