force-app/main/default/objects/Avaliacao__c/fields/DispositivosRespiratorios_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>DispositivosRespiratorios_Fisioterapia__c</fullName>
    <label>Dispositivos respiratórios</label>
    <type>TextArea</type>
</CustomField>