force-app/main/default/objects/Avaliacao__c/fields/Diurese_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Diurese_Enfermagem__c</fullName>
    <label>Diurese</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Espontânea por fralda</fullName>
            </value>
            <value>
                <fullName>Espontânea por Jontex</fullName>
            </value>
            <value>
                <fullName>Dispositivo masculino para coleta</fullName>
            </value>
            <value>
                <fullName>SVD</fullName>
            </value>
            <value>
                <fullName>Cistostomia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>