force-app/main/default/objects/Avaliacao__c/fields/Dor_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Dor_Enfermagem__c</fullName>
    <label>Dor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relata dor ausente</fullName>
            </value>
            <value>
                <fullName>Relata dor presente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>