force-app/main/default/objects/Avaliacao__c/fields/Dreno_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Dreno_Enfermagem__c</fullName>
    <label>Dreno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Torácico (D ou E)</fullName>
            </value>
            <value>
                <fullName>Mediastino</fullName>
            </value>
            <value>
                <fullName>Penrose</fullName>
            </value>
            <value>
                <fullName>Suctor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>