force-app/main/default/objects/Avaliacao__c/fields/Dreno_Local_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Dreno_Local_Enfermagem__c</fullName>
    <label>Dreno - Local</label>
    <length>36</length>
    <type>Text</type>
</CustomField>