force-app/main/default/objects/Avaliacao__c/fields/e310_ou_e315_emocional_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>e310_ou_e315_emocional_Psicologia__c</fullName>
    <label>e310 ou e315</label>
    <length>255</length>
    <type>Text</type>
</CustomField>