force-app/main/default/objects/Avaliacao__c/fields/Edema_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Edema_Fisioterapia__c</fullName>
    <label>Edema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>