force-app/main/default/objects/Avaliacao__c/fields/Edema_Local_caso_se_aplique_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Edema_Local_caso_se_aplique_Enfermagem__c</fullName>
    <label>Edema - Local (caso se aplique)</label>
    <length>36</length>
    <type>Text</type>
</CustomField>