force-app/main/default/objects/Avaliacao__c/fields/Edema_Local_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Edema_Local_Fisioterapia__c</fullName>
    <label>Local</label>
    <length>255</length>
    <type>Text</type>
</CustomField>