force-app/main/default/objects/Avaliacao__c/fields/Escadas_TO__c.field-meta.xml
<CustomField>
    <fullName>Escadas_TO__c</fullName>
    <label>M - Escadas</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>