force-app/main/default/objects/Avaliacao__c/fields/Escala_de_dor_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Escala_de_dor_Enfermagem__c</fullName>
    <label>Escala de dor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dor_Enfermagem__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>