force-app/main/default/objects/Avaliacao__c/fields/EscalaDeRamsayPontuacao_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>EscalaDeRamsayPontuacao_Enfermagem__c</fullName>
    <formula>IF(TEXT(Sedacao_Enfermagem__c) = &apos;Acordado, agitado, colabora e atende&apos;, 1 , 
IF(TEXT(Sedacao_Enfermagem__c) = &apos;Acordado, cooperativo, colabora e atende&apos;, 2, 
IF(TEXT(Sedacao_Enfermagem__c) = &apos;Sonolento, atende aos comandos&apos;, 3, 
IF(TEXT(Sedacao_Enfermagem__c) = &apos;Dormindo, responde rapidamente ao estímulo gabelar ou estímulo sonoro vigoroso&apos;, 4 , 
IF(TEXT(Sedacao_Enfermagem__c) = &apos;Dormindo, responde lentamente ao estímulo gabelar ou estímulo sonoro vigoroso&apos;, 5, 
IF(TEXT(Sedacao_Enfermagem__c) = &apos;Dormindo, sem resposta&apos;, 6, null))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontuação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>