force-app/main/default/objects/Avaliacao__c/fields/Especialidade_Medica__c.field-meta.xml
<CustomField>
    <fullName>Especialidade_Medica__c</fullName>
    <label>Especialidade Médica</label>
    <length>36</length>
    <type>Text</type>
</CustomField>