force-app/main/default/objects/Avaliacao__c/fields/Especificar_expectativas_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Especificar_expectativas_Psicologia__c</fullName>
    <label>Especificar expectativas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>