force-app/main/default/objects/Avaliacao__c/fields/Estado_atual_a_doen_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Estado_atual_a_doen_Psicologia__c</fullName>
    <label>Estado atual a doença/hospitalização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revolta</fullName>
            </value>
            <value>
                <fullName>Negação</fullName>
            </value>
            <value>
                <fullName>Barganha</fullName>
            </value>
            <value>
                <fullName>Depressão</fullName>
            </value>
            <value>
                <fullName>Aceitação</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>