force-app/main/default/objects/Avaliacao__c/fields/Estado_Emocional_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Emocional_Fisioterapia__c</fullName>
    <label>Estado Emocional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calmo</fullName>
            </value>
            <value>
                <fullName>Agitado</fullName>
            </value>
            <value>
                <fullName>Agressivo</fullName>
            </value>
            <value>
                <fullName>Letárgico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>