force-app/main/default/objects/Avaliacao__c/fields/Estado_Geral_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Geral_Fisioterapia__c</fullName>
    <label>Estado Geral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bom</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Ruim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>