force-app/main/default/objects/Avaliacao__c/fields/Estrat_gias_de_enfrentamento_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Estrat_gias_de_enfrentamento_Psicologia__c</fullName>
    <label>Estratégias de enfrentamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funcional</fullName>
            </value>
            <value>
                <fullName>Disfuncional</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>