force-app/main/default/objects/Avaliacao__c/fields/Evacuacao_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Evacuacao_Enfermagem__c</fullName>
    <label>Evacuação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evacuação no período</fullName>
            </value>
            <value>
                <fullName>Constipação</fullName>
            </value>
            <value>
                <fullName>Diarreia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>