force-app/main/default/objects/Avaliacao__c/fields/Evacuacao_Outro_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Evacuacao_Outro_Enfermagem__c</fullName>
    <label>Evacuação - Outro</label>
    <length>36</length>
    <type>Text</type>
</CustomField>