force-app/main/default/objects/Avaliacao__c/fields/ExamesImagemOutros_Medica__c.field-meta.xml
<CustomField>
    <fullName>ExamesImagemOutros_Medica__c</fullName>
    <label>Outros</label>
    <type>TextArea</type>
</CustomField>