force-app/main/default/objects/Avaliacao__c/fields/Expansibilidade_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Expansibilidade_Fisioterapia__c</fullName>
    <label>Expansibilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Diminuída</fullName>
            </value>
            <value>
                <fullName>Simétrica</fullName>
            </value>
            <value>
                <fullName>Assimétrica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>