force-app/main/default/objects/Avaliacao__c/fields/Expectativas_da_fam_lia_para_iPsicologia__c.field-meta.xml
<CustomField>
    <fullName>Expectativas_da_fam_lia_para_iPsicologia__c</fullName>
    <label>Expectativas da família para internação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adequada</fullName>
            </value>
            <value>
                <fullName>Inadequada</fullName>
            </value>
            <value>
                <fullName>Limitada</fullName>
            </value>
            <value>
                <fullName>Ausente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>