force-app/main/default/objects/Avaliacao__c/fields/Express_o_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Express_o_Fonoaudiologia__c</fullName>
    <label>Expressão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternativa</fullName>
            </value>
            <value>
                <fullName>Articulação áfona</fullName>
            </value>
            <value>
                <fullName>Ausente</fullName>
            </value>
            <value>
                <fullName>Escrita</fullName>
            </value>
            <value>
                <fullName>Gestual</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>