force-app/main/default/objects/Avaliacao__c/fields/Expressao_TO__c.field-meta.xml
<CustomField>
    <fullName>Expressao_TO__c</fullName>
    <label>O - Expressão</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>