force-app/main/default/objects/Avaliacao__c/fields/Face_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Face_Fonoaudiologia__c</fullName>
    <label>Face</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simétrica no repouso</fullName>
            </value>
            <value>
                <fullName>Assimétrica no repouso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>