force-app/main/default/objects/Avaliacao__c/fields/Fala_2_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Fala_2_Fonoaudiologia__c</fullName>
    <label>Fala</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>d330.0 - Não há problema (0-4%)</fullName>
            </value>
            <value>
                <fullName>d330.1 - Problema ligeiro (5-24%)</fullName>
            </value>
            <value>
                <fullName>d330.2 - Problema moderado (25-49%)</fullName>
            </value>
            <value>
                <fullName>d330.3 - Problema grave (50-95%)</fullName>
            </value>
            <value>
                <fullName>d330.4 - Problema completo (96-100%)</fullName>
            </value>
            <value>
                <fullName>d330.8 - Não especificado</fullName>
            </value>
            <value>
                <fullName>d330.9 - Não aplicável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>