force-app/main/default/objects/Avaliacao__c/fields/Fala_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Fala_Fonoaudiologia__c</fullName>
    <label>Fala</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ausente</fullName>
            </value>
            <value>
                <fullName>Disfluente</fullName>
            </value>
            <value>
                <fullName>Ininteligível</fullName>
            </value>
            <value>
                <fullName>Inteligível</fullName>
            </value>
            <value>
                <fullName>Alterada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>