force-app/main/default/objects/Avaliacao__c/fields/Fam_lia_demanda_acompanhamento_Psicologi__c.field-meta.xml
<CustomField>
    <fullName>Fam_lia_demanda_acompanhamento_Psicologi__c</fullName>
    <label>Família demanda acompanhamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>