force-app/main/default/objects/Avaliacao__c/fields/FC_BPM_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>FC_BPM_Fisioterapia__c</fullName>
    <label>FC (BPM)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>