force-app/main/default/objects/Avaliacao__c/fields/FC_Medica__c.field-meta.xml
<CustomField>
    <fullName>FC_Medica__c</fullName>
    <label>FC</label>
    <length>9</length>
    <type>Text</type>
</CustomField>