force-app/main/default/objects/Avaliacao__c/fields/FiO2_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>FiO2_Enfermagem__c</fullName>
    <label>FiO2 (%)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>