force-app/main/default/objects/Avaliacao__c/fields/FOIS_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>FOIS_Fonoaudiologia__c</fullName>
    <label>FOIS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nível 1 – Nulidade de via oral</fullName>
            </value>
            <value>
                <fullName>Nível 2 – Dependente de via alternativa, mínima via oral</fullName>
            </value>
            <value>
                <fullName>Nível 3 – Dependente de via alternativa, consistente via oral</fullName>
            </value>
            <value>
                <fullName>Nível 4 – Via oral total, única consistência</fullName>
            </value>
            <value>
                <fullName>Nível 5 – Via oral total, múltiplas consistências, preparo especial</fullName>
            </value>
            <value>
                <fullName>Nível 6 – Via oral total, múltiplas consistências, sem preparo especial</fullName>
            </value>
            <value>
                <fullName>Nível 7 – Via oral total, sem restrições</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>