force-app/main/default/objects/Avaliacao__c/fields/FR_fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>FR_fisioterapia__c</fullName>
    <label>FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>