force-app/main/default/objects/Avaliacao__c/fields/FR_Ipm_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>FR_Ipm_Fisioterapia__c</fullName>
    <label>FR (Ipm)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>