force-app/main/default/objects/Avaliacao__c/fields/FR_Medica__c.field-meta.xml
<CustomField>
    <fullName>FR_Medica__c</fullName>
    <label>FR</label>
    <length>9</length>
    <type>Text</type>
</CustomField>