force-app/main/default/objects/Avaliacao__c/fields/Frequ_ncia_de_uso_Droga_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Frequ_ncia_de_uso_Droga_Psicologia__c</fullName>
    <label>Frequência de uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em abstinência</fullName>
            </value>
            <value>
                <fullName>Socialmente</fullName>
            </value>
            <value>
                <fullName>Todos os finais de semana</fullName>
            </value>
            <value>
                <fullName>3 á 5 vezes por semana</fullName>
            </value>
            <value>
                <fullName>Diariamente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>