force-app/main/default/objects/Avaliacao__c/fields/Frequ_ncia_de_uso_Tabagista_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Frequ_ncia_de_uso_Tabagista_Psicologia__c</fullName>
    <label>Frequência de uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em abstinência</fullName>
            </value>
            <value>
                <fullName>Socialmente</fullName>
            </value>
            <value>
                <fullName>Até 5 unids/dia</fullName>
            </value>
            <value>
                <fullName>5 à 10 unids/dia</fullName>
            </value>
            <value>
                <fullName>10 à 20 unids/dia</fullName>
            </value>
            <value>
                <fullName>Mais de 01 carteira/dia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>