force-app/main/default/objects/Avaliacao__c/fields/Frequencia_cardiaca_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Frequencia_cardiaca_Enfermagem__c</fullName>
    <label>Frequência cardíaca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normocardia</fullName>
            </value>
            <value>
                <fullName>Taquicardia</fullName>
            </value>
            <value>
                <fullName>Bradicardia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>