force-app/main/default/objects/Avaliacao__c/fields/Geral_Medica__c.field-meta.xml
<CustomField>
    <fullName>Geral_Medica__c</fullName>
    <label>Geral</label>
    <type>TextArea</type>
</CustomField>