force-app/main/default/objects/Avaliacao__c/fields/Grau_de_Orienta_o_fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Grau_de_Orienta_o_fisioterapia__c</fullName>
    <label>Grau de Orientação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orientado</fullName>
            </value>
            <value>
                <fullName>Desorientado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>