force-app/main/default/objects/Avaliacao__c/fields/Hemoglobina_Medica__c.field-meta.xml
<CustomField>
    <fullName>Hemoglobina_Medica__c</fullName>
    <label>Hemoglobina</label>
    <length>9</length>
    <type>Text</type>
</CustomField>