force-app/main/default/objects/Avaliacao__c/fields/Hidrata_o_Indicar_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Hidrata_o_Indicar_Fisioterapia__c</fullName>
    <label>Hidratação - Indicar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/4</fullName>
            </value>
            <value>
                <fullName>2/4</fullName>
            </value>
            <value>
                <fullName>3/4</fullName>
            </value>
            <value>
                <fullName>4/4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>